--- a/package.json
+++ b/package.json
@@ -5,24 +5,28 @@
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios"
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
-    "expo": "^51.0.14",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~50.0.17",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
     "react-native-country-flag": "^2.0.2",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6",
+    "expo-splash-screen": "~0.26.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.79",
-    "typescript": "~5.3.3"
+    "@types/react": "~18.2.14",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
