--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-country-flag": "^2.0.2",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "expo-symbols": "~0.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
