--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "expo": "^51.0.14",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "expo-symbols": "~0.1.4",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-country-flag": "^2.0.2",
-    "react-native-screens": "3.31.1",
-    "expo-symbols": "~0.1.4"
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
