--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
-    "expo": "^51.0.14",
+    "expo": "~51.0.36",
     "expo-linking": "^6.3.1",
-    "expo-splash-screen": "~0.27.5",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
-    "expo-symbols": "~0.1.4",
+    "expo-symbols": "~0.1.5",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-country-flag": "^2.0.2",
-    "react-native-safe-area-context": "^4.11.0",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1"
   },
   "devDependencies": {
